Tối ưu: Sửa lại router, cấu hình lại AuthProvider

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   <div id="root"></div>
 
   <!--begin::Loading markup-->
-  <div id="splash-screen" class="splash-screen">
+  <!-- <div id="splash-screen" class="splash-screen">
     <img style="height: 100px" src="./public/logo-02.png" class="dark-logo" alt="Keenthemes dark logo" />
     <img style="height: 100px" src="./public/logo-02.png" class="light-logo" alt="Keenthemes light logo" />
     <div class="loader-wrapper">
       <span class="loader"></span>
       <span class="loading-text">Loading...</span>
     </div>
-  </div>
+  </div> -->
   <!--end::Loading markup-->
 
   <div id="root-modals"></div>
